Updated checkout form styling and fixed cart bug

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -58,6 +58,9 @@
       </section>
     </div>
   </main>
+<div id="toast" 
+     class="fixed bottom-5 right-5 bg-green-600 text-white px-5 py-3 rounded-lg shadow-lg hidden">
+</div>
 
   <script src="js/checkout.js"></script>
 </body>
