--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,9 @@
     <div id="product-list" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4 sm:gap-6">
     </div>
   </main>
+<div id="toast" 
+     class="fixed bottom-5 right-5 bg-green-600 text-white px-5 py-3 rounded-lg shadow-lg hidden">
+</div>
 
   <script src="js/product.js"></script>
 </body>
